# python-package-template

./: README.md  TEMPLATE_SUMMARY.md  USAGE.md  cookiecutter.json
.github/: copilot-instructions.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/: copilot-instructions.md
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/docs/: conf.py  examples.md  index.md
{{cookiecutter.project_slug}}/docs/api/: index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_core.py
